src/style.scss
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base {
  html {
    ::-webkit-scrollbar {
      width: 16px;
    }

    ::-webkit-scrollbar-thumb {
      background-color: #D93D86;
      outline: 2px solid black;
    }
  }

  body {
    color: #191919;
    background-color: #faf8ef;
    padding-bottom: 20px;
  }

  #root {
    padding: 10px 10% 0 10%;
    @media (max-width: 768px) {
        padding: 10px 16px 0 16px;
      }
  }
}

@layer components {

  .about {
    margin-left: 12px;

    li {
      @apply text-xl font-bold mb-2 list-decimal;

      >div,
      >p {
        @apply text-lg mb-4 font-normal;
      }

    }

    a {
      @apply underline mx-1 underline-offset-4;
    }
  }

  input[type="checkbox"] {
    appearance: none;
    @apply w-4 h-4 cursor-pointer;
    border: 2px solid black;

    &:checked {
      background-color: #D93D86;
    }
  }

  a.github {
    @apply w-7 h-7 cursor-pointer inline-block align-bottom;
    background-size: contain;
    -webkit-mask: url("/icons/github.svg") no-repeat center / contain;
  }

  .player {
    @apply border-[3px] border-black rounded-lg p-4 flex gap-1 flex-col;

    .control {
      @apply flex items-center gap-4 mt-4;

      >div {
        @apply w-8 h-8 bg-contain bg-no-repeat bg-center cursor-pointer;
      }

      .last {
        background-image: url("/icons/last.svg");
      }

      .playing {
        background-image: url("/icons/pause.svg");
      }

      .paused {
        background-image: url("/icons/play.svg");
      }

      .loading {
        background-image: url("/icons/loading.svg");
        @apply animate-spin;
      }

      .next {
        background-image: url("/icons/next.svg");
      }

      .backfoward {
        background-image: url("/icons/back.svg");
      }

      .forward {
        background-image: url("/icons/forward.svg");
      }

      .title {
        @apply w-full px-3 leading-8 text-ellipsis cursor-text text-left text-nowrap overflow-hidden bg-black text-white rounded-lg;
      }

      .progress {
        @apply flex w-32 justify-between items-center
      }
    }
  }

  .mode {
    @apply flex flex-col gap-5;

    &.dictation .scripts .script {

      &[data-begin]:hover {
        >div {
          @apply cursor-pointer text-black;
          background-color: pink;
        }
      }

      >div {
        @apply pl-1;
      }

      input {
        @apply text-left text-lg w-96 mr-2 font-medium border-b-2 border-black outline-none;
        @media (max-width: 768px) {
            @apply w-full;
          }

        &.wrong {
          @apply text-red-500;

          +label {
            &::after {
              @apply text-red-500 inline-block mr-2;
              content: attr(data-answer);
            }
          }
        }

        &.correct {
          @apply text-green-500;
        }

        &:focus {
          @apply border-pink-500 outline-none;
        }
      }
    }

    .scripts {
      height: 68vh;
      max-height: 68vh;
      overflow-y: auto;
      padding-right: 20px;
      font-family: sans-serif;

      .script {
        @apply flex mb-2;

        >span {
          @apply mr-1;
        }

        .highlight {
          @apply bg-[#D93D86] text-white pl-1 mx-1;
        }

        h3 {
          @apply text-xl min-w-28 max-w-28 font-bold text-ellipsis text-nowrap overflow-hidden mr-2;
        }

        >div {
          @apply text-xl break-words leading-8;
        }

        .blank {
          @apply mx-2 inline-block;

          &.wrong {
            @apply text-red-500;

            &::after {
              @apply text-red-500 inline-block ml-2;
              content: attr(data-answer);
            }
          }

          &.correct {
            @apply text-green-500;
          }
        }

        input {
          @apply text-lg w-[25px] h-[25px] font-medium outline outline-2 -outline-offset-1 outline-[#00000066] text-center bg-transparent;

          &:focus {
            @apply outline-2 outline-pink-500 z-10 relative;
          }
        }

      }
    }

    .control {
      @apply flex items-center gap-4;
    }
  }

  button {
    @apply p-3 h-14 bg-[#D93D86] text-white font-semibold border-black border-[3px] cursor-pointer text-lg;
  }

  .logo {
    @apply relative w-32;

    >.text {
      @apply text-6xl font-bold absolute;

      text-shadow: -1.5px -1.5px 0 #000, 1.5px -1.5px 0 #000, -1.5px 1.5px 0 #000, 1.5px 1.5px 0 #000;

      $increment-left: var(--x-distance, 6px);
      $increment-top: var(--y-distance, 4px);

      @for $i from 1 through 5 {
        &:nth-child(#{$i}) {
          left: #{calc(($i - 1) * $increment-left)};
          top: #{calc(($i - 1) * $increment-top)};
        }
      }
    }
  }

  .info {
    @apply flex flex-col gap-4 border-[3px] border-black rounded-lg p-4 text-lg;

    .introduction {
      >p {
        @apply mb-2
      }
    }

    h3 {
      @apply text-4xl font-bold mb-3;
    }

    li {
      @apply flex gap-2 items-baseline;

      &:not(:last-child) {
        @apply mb-2;
      }
    }

    .text {
      @apply text-xl font-bold text-nowrap
    }

  }

  header {
    @apply h-28 flex w-full justify-between items-center;
  }

  h1 {
    @apply text-5xl font-bold mb-2;
  }

  .episode {

    @apply pb-10;
    >main {
      @apply flex flex-nowrap gap-20 w-full;
      @media (max-width: 1024px) {
          @apply gap-8;
        }
      
        @media (max-width: 768px) {
          @apply flex-wrap gap-8;
        }

      .meta {
        @apply flex flex-col gap-4 max-w-[40%];
        @media (max-width: 768px) {
            @apply max-w-full w-full;
          }
      }

      .pro {
        flex: 0 1 60%;
        @media (max-width: 768px) {
            flex: 0 1 100%;
          }

        .operation {
          @apply flex justify-between;
          @media (max-width: 500px) {
              flex-direction: column;
              gap: 16px;
            }
        }
      }
    }
  }

  .mode_tab {
    @apply relative h-28 w-60;

    div {
      @apply cursor-pointer absolute text-2xl font-bold p-2 border-black border-[3px] bg-white w-fit min-w-24 text-center;

      &:nth-child(1) {
        left: 0;
        top: 0;
        z-index: 0;
      }

      &:nth-child(2) {
        left: 85px;
        top: 20px;
        z-index: 1;
      }

      &:nth-child(3) {
        left: 150px;
        top: -15px;
        z-index: 2;
      }

      &.active {
        @apply bg-[#D93D86] text-white z-10;
      }
    }
  }

  .dropdown {
    @apply relative w-64;
    @media (max-width: 500px) {
        @apply w-full;
      }

    .selected {
      @apply flex font-medium items-center gap-2 p-2 border-[3px] border-black rounded-lg cursor-pointer;
    }

    .options {

      @apply absolute z-10 top-12 left-0 w-full bg-white border-[3px] border-black rounded-lg p-2;

      .option {
        @apply p-2 cursor-pointer;

        &:hover {
          @apply bg-[#D93D86] text-white font-semibold rounded-lg;
        }
      }
    }
  }

  .episodes-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 25px;

    @media (max-width: 1280px) {
        grid-template-columns: repeat(3, 1fr);
      }
    
      @media (max-width: 1024px) {
        grid-template-columns: repeat(2, 1fr);
      }
    
      @media (max-width: 640px) {
        grid-template-columns: 1fr;
      }
    .episode_card img {
      @apply h-56 w-full object-cover rounded-lg;
      cursor: pointer;
      display: flex;
      flex-direction: column;
      border: 3px solid transparent;
      border-style: solid;
      border-radius: 16px;
      background:
        linear-gradient(#ccc 0 0) padding-box,
        linear-gradient(to right, #FB62D0 0%, #83E0CA 100%) border-box;
    }

    .episode-title {
      margin-top: 8px;
      font-size: 17px;
      font-weight: bold;
    }
  }
}

.pagination {
  display: flex;
  justify-content: center;
  margin-top: 20px;

  button {
    padding: 10px 20px;
    margin: 0 5px;
    border: none;
    background-color: black;
    color: white;
    cursor: pointer;
    font-size: 16px;

    &.active,
    &:hover {
      background-color: #D93D86;
    }
  }
}

.search-bar {
  display: flex;
  align-items: center;
  padding-top: 10px;

  &::before {
    margin-right: 2px;
    margin-bottom: 12px;
    content: "";
    width: 28px;
    height: 28px;
    background-image: url("/icons/search.svg");
    background-size: contain;
    background-repeat: no-repeat;
  }

  input {
    width: 320px;
    @media (max-width: 640px) {
        width: 100%;
      }

    background-color: transparent;

    &:focus {
      outline: none;
    }
  }
}

